fix: ensure proper alignment of items in features grid

--- a/wp-content/themes/insure-landing-page/assets/css/features.css
+++ b/wp-content/themes/insure-landing-page/assets/css/features.css
@@ -24,6 +24,7 @@
 
 .features__grid {
 	display: grid;
+  align-items: start;
 	gap: 3.5rem;
 	margin-top: 5rem;
 }
